// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Articles Flourish Embed Story should match snapshot 1`] = `
<iframe
  class="bbc-axsk9o"
  frameborder="0"
  height="575"
  id="flourish-id-b74fce73"
  scrolling="no"
  src="https://flo.uri.sh/story/2070814/embed?auto=1"
  title="Interactive or visual content"
  width="700"
/>
`;

exports[`Canonical Articles Flourish Embed Visualisations should match snapshot 1`] = `
<iframe
  class="bbc-axsk9o"
  frameborder="0"
  height="575"
  id="flourish-id-fa6c571f"
  scrolling="no"
  src="https://flo.uri.sh/visualisation/15506675/embed?auto=1"
  title="Interactive or visual content"
  width="700"
/>
`;

exports[`Canonical Articles Flourish Embed Visualisations should match snapshot 2`] = `
<iframe
  class="bbc-axsk9o"
  frameborder="0"
  height="575"
  id="flourish-id-d6c28b92"
  scrolling="no"
  src="https://flo.uri.sh/visualisation/15505131/embed?auto=1"
  title="Interactive or visual content"
  width="700"
/>
`;

exports[`Canonical Articles Flourish Embed Visualisations should match snapshot 3`] = `
<iframe
  class="bbc-axsk9o"
  frameborder="0"
  height="575"
  id="flourish-id-cbc84ae7"
  scrolling="no"
  src="https://flo.uri.sh/visualisation/15505266/embed?auto=1"
  title="Interactive or visual content"
  width="700"
/>
`;

exports[`Canonical Articles Flourish Embed Visualisations should match snapshot 4`] = `
<iframe
  class="bbc-axsk9o"
  frameborder="0"
  height="575"
  id="flourish-id-51a5a7f8"
  scrolling="no"
  src="https://flo.uri.sh/visualisation/15505408/embed?auto=1"
  title="Interactive or visual content"
  width="700"
/>
`;

exports[`Canonical Articles Paragraph should match paragraph text 1`] = `"A cada dez anos, o Brasil tem uma oportunidade inédita de olhar para a sua população com os censos demográficos. "`;
